--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   outcome_frontend:
     container_name: football_outcome_frontend
-    image: mustaphaa/outcome:${app_version}
+    image: mehmood104/outcome:${app_version}
     build: ./outcome
     ports: 
     - target: 5000
@@ -12,19 +12,19 @@ services:
       replicas: 5
   player_backend:
     container_name: football_player_backend
-    image: mustaphaa/player:${app_version}
+    image: mehmood104/player:${app_version}
     build: ./player
     deploy:
       replicas: 5
   team_backend:
     container_name: football_team_backend
-    image: mustaphaa/team:${app_version}
+    image: mehmood104/team:${app_version}
     build: ./team
     deploy:
       replicas: 5
   result_backend:
     container_name: football_result_backend
-    image: mustaphaa/result:${app_version}
+    image: mehmood104/result:${app_version}
     build: ./result
     deploy:
       replicas: 5
