--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
-    github.com/project-slug: backstage/backstage
+    github.com/project-slug: Mehmoodhassan/Jenkins-project
   name: kubernetes-component
 spec:
   lifecycle: production
