--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
+    gocd.org/pipelines: backstage
   name: kubernetes-component
 spec:
   lifecycle: production
